--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">CodePath-BitFit</string>
+    <string name="head_message">How are feeling today?</string>
+    <string name="check_in_s">Check In\'s</string>
+    <string name="why_string">Why are you feeling this way?</string>
+    <string name="todo">TODO</string>
+    <string name="scale">Scale 1 - 10</string>
+    <string name="confident">Confident</string>
+    <string name="anxious">Anxious</string>
+    <string name="surprised">Surprised</string>
+    <string name="anger">Anger</string>
+    <string name="disgust">Disgust</string>
+    <string name="sadness">Sadness</string>
+    <string name="fear">Fear</string>
+    <string name="joy">Joy</string>
 </resources>
