-Done- Double check view IDs Build navigation
-TODO-
Setup database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="check_in_s">Check In\'s</string>
     <string name="why_string">Why are you feeling this way?</string>
     <string name="todo">TODO</string>
-    <string name="scale">Scale 1 - 10</string>
+    <string name="scale">Scale 1 to 10</string>
     <string name="confident">Confident</string>
     <string name="anxious">Anxious</string>
     <string name="surprised">Surprised</string>
