-Done- Setup nav
-Need todo-
Update recyclerView
Connect database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="sadness">Sadness</string>
     <string name="fear">Fear</string>
     <string name="joy">Joy</string>
+    <string name="back">Back</string>
+    <string name="post">Post</string>
 </resources>
