-Need todo- Update recyclerView Connect database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="joy">Joy</string>
     <string name="back">Back</string>
     <string name="post">Post</string>
+    <string name="date">10/10/2022</string>
+    <string name="back_button">Back button</string>
+    <string name="_7">7</string>
+    <string name="add_post">Add Post</string>
+    <string name="add_post_button">Add post button</string>
 </resources>
